--- a/doc/latex/d0/d4d/pennfat__kernel_8h_source.tex
+++ b/doc/latex/d0/d4d/pennfat__kernel_8h_source.tex
@@ -82,6 +82,12 @@
 \DoxyCodeLine{00149\ }
 \DoxyCodeLine{00155\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat__kernel_8h_a9317fe11a36bfc2d731bcbacc3a57728}{k\_ls}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ filename);}
 \DoxyCodeLine{00156\ }
-\DoxyCodeLine{00157\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00157\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat__kernel_8h_ac41ad0b4fad0417ca8009c0475a8fb45}{k\_rename}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ source,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ dest);}
+\DoxyCodeLine{00158\ }
+\DoxyCodeLine{00159\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat__kernel_8h_a244379d41a5f93e98ab32fb999982696}{k\_change\_mode}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ change,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ filename);}
+\DoxyCodeLine{00160\ }
+\DoxyCodeLine{00161\ \textcolor{keywordtype}{char}*\ \mbox{\hyperlink{pennfat__kernel_8h_a08194e0542962e4d980cd9278f33c7f5}{k\_read\_all}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ filename,\ \textcolor{keywordtype}{int}*\ read\_num);}
+\DoxyCodeLine{00162\ }
+\DoxyCodeLine{00163\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
