--- a/doc/latex/d5/d87/globals_8h.tex
+++ b/doc/latex/d5/d87/globals_8h.tex
@@ -8,11 +8,23 @@
 \item 
 \mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8h_a02d81cd80b6c38b0ce741c9244fd9f17}{processes}} \mbox{[}3\mbox{]}
 \item 
+\mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8h_a4a5bf3e2ca112a01dc3029503e3e80e4}{blocked}}
+\item 
+\mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8h_aa733d308e782d6ef693944928ff7d3d1}{stopped}}
+\item 
+\mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8h_a5e7aa369c6421b8cf905e838507cc70a}{zombied}}
+\item 
 \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}}
 \end{DoxyCompactItemize}
 
 
 \doxysubsection{Variable Documentation}
+\Hypertarget{globals_8h_a4a5bf3e2ca112a01dc3029503e3e80e4}\label{globals_8h_a4a5bf3e2ca112a01dc3029503e3e80e4} 
+\index{globals.h@{globals.h}!blocked@{blocked}}
+\index{blocked@{blocked}!globals.h@{globals.h}}
+\doxysubsubsection{\texorpdfstring{blocked}{blocked}}
+{\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} blocked\hspace{0.3cm}{\ttfamily [extern]}}
+
 \Hypertarget{globals_8h_aadfd9da35df54aa07940062a8b8326e2}\label{globals_8h_aadfd9da35df54aa07940062a8b8326e2} 
 \index{globals.h@{globals.h}!current@{current}}
 \index{current@{current}!globals.h@{globals.h}}
@@ -24,4 +36,16 @@
 \index{processes@{processes}!globals.h@{globals.h}}
 \doxysubsubsection{\texorpdfstring{processes}{processes}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} processes\mbox{[}3\mbox{]}\hspace{0.3cm}{\ttfamily [extern]}}
+
+\Hypertarget{globals_8h_aa733d308e782d6ef693944928ff7d3d1}\label{globals_8h_aa733d308e782d6ef693944928ff7d3d1} 
+\index{globals.h@{globals.h}!stopped@{stopped}}
+\index{stopped@{stopped}!globals.h@{globals.h}}
+\doxysubsubsection{\texorpdfstring{stopped}{stopped}}
+{\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} stopped\hspace{0.3cm}{\ttfamily [extern]}}
+
+\Hypertarget{globals_8h_a5e7aa369c6421b8cf905e838507cc70a}\label{globals_8h_a5e7aa369c6421b8cf905e838507cc70a} 
+\index{globals.h@{globals.h}!zombied@{zombied}}
+\index{zombied@{zombied}!globals.h@{globals.h}}
+\doxysubsubsection{\texorpdfstring{zombied}{zombied}}
+{\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} zombied\hspace{0.3cm}{\ttfamily [extern]}}
 
