--- a/doc/latex/d5/d87/globals_8h_source.tex
+++ b/doc/latex/d5/d87/globals_8h_source.tex
@@ -11,8 +11,14 @@
 \DoxyCodeLine{00007\ }
 \DoxyCodeLine{00008\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a02d81cd80b6c38b0ce741c9244fd9f17}{processes}}[3];}
 \DoxyCodeLine{00009\ }
-\DoxyCodeLine{00010\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}};}
+\DoxyCodeLine{00010\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a4a5bf3e2ca112a01dc3029503e3e80e4}{blocked}};}
 \DoxyCodeLine{00011\ }
-\DoxyCodeLine{00012\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00012\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_aa733d308e782d6ef693944928ff7d3d1}{stopped}};}
+\DoxyCodeLine{00013\ }
+\DoxyCodeLine{00014\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a5e7aa369c6421b8cf905e838507cc70a}{zombied}};}
+\DoxyCodeLine{00015\ }
+\DoxyCodeLine{00016\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}};}
+\DoxyCodeLine{00017\ }
+\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
