--- a/doc/latex/db/d28/globals_8c.tex
+++ b/doc/latex/db/d28/globals_8c.tex
@@ -6,11 +6,23 @@
 \item 
 \mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_a02d81cd80b6c38b0ce741c9244fd9f17}{processes}} \mbox{[}3\mbox{]}
 \item 
+\mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_a4a5bf3e2ca112a01dc3029503e3e80e4}{blocked}}
+\item 
+\mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_aa733d308e782d6ef693944928ff7d3d1}{stopped}}
+\item 
+\mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_a5e7aa369c6421b8cf905e838507cc70a}{zombied}}
+\item 
 \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_aadfd9da35df54aa07940062a8b8326e2}{current}} = NULL
 \end{DoxyCompactItemize}
 
 
 \doxysubsection{Variable Documentation}
+\Hypertarget{globals_8c_a4a5bf3e2ca112a01dc3029503e3e80e4}\label{globals_8c_a4a5bf3e2ca112a01dc3029503e3e80e4} 
+\index{globals.c@{globals.c}!blocked@{blocked}}
+\index{blocked@{blocked}!globals.c@{globals.c}}
+\doxysubsubsection{\texorpdfstring{blocked}{blocked}}
+{\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} blocked}
+
 \Hypertarget{globals_8c_aadfd9da35df54aa07940062a8b8326e2}\label{globals_8c_aadfd9da35df54aa07940062a8b8326e2} 
 \index{globals.c@{globals.c}!current@{current}}
 \index{current@{current}!globals.c@{globals.c}}
@@ -22,4 +34,16 @@
 \index{processes@{processes}!globals.c@{globals.c}}
 \doxysubsubsection{\texorpdfstring{processes}{processes}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} processes\mbox{[}3\mbox{]}}
+
+\Hypertarget{globals_8c_aa733d308e782d6ef693944928ff7d3d1}\label{globals_8c_aa733d308e782d6ef693944928ff7d3d1} 
+\index{globals.c@{globals.c}!stopped@{stopped}}
+\index{stopped@{stopped}!globals.c@{globals.c}}
+\doxysubsubsection{\texorpdfstring{stopped}{stopped}}
+{\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} stopped}
+
+\Hypertarget{globals_8c_a5e7aa369c6421b8cf905e838507cc70a}\label{globals_8c_a5e7aa369c6421b8cf905e838507cc70a} 
+\index{globals.c@{globals.c}!zombied@{zombied}}
+\index{zombied@{zombied}!globals.c@{globals.c}}
+\doxysubsubsection{\texorpdfstring{zombied}{zombied}}
+{\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} zombied}
 
