--- a/doc/latex/db/d80/sys__call_8h_source.tex
+++ b/doc/latex/db/d80/sys__call_8h_source.tex
@@ -19,7 +19,7 @@
 \DoxyCodeLine{00027\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ fd1,}
 \DoxyCodeLine{00028\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennos_8c_a2e0cca4a43c21259b881d59c96c74fe0}{priority}});}
 \DoxyCodeLine{00029\ }
-\DoxyCodeLine{00042\ pid\_t\ \mbox{\hyperlink{sys__call_8h_a3c0c6c4ae69799354d707ff57ac925d3}{s\_waitpid}}(pid\_t\ pid,\ \textcolor{keywordtype}{int}*\ wstatus,\ \textcolor{keywordtype}{bool}\ nohang);}
+\DoxyCodeLine{00042\ pid\_t\ \mbox{\hyperlink{sys__call_8h_ae073b5d4f1fae198ea259cd56b9d74d0}{s\_waitpid}}(pid\_t\ pid,\ \mbox{\hyperlink{kernel_8h_ab97efa0d1c4aeaf55ff756bf16685854}{process\_state\_t}}*\ wstatus,\ \textcolor{keywordtype}{bool}\ nohang);}
 \DoxyCodeLine{00043\ }
 \DoxyCodeLine{00051\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{sys__call_8h_a18e6794b108eea25459bd7fe31de4e76}{s\_kill}}(pid\_t\ pid,\ \textcolor{keywordtype}{int}\ signal);}
 \DoxyCodeLine{00052\ }
