--- a/doc/latex/d4/dc4/pennfat_8c.tex
+++ b/doc/latex/d4/dc4/pennfat_8c.tex
@@ -28,10 +28,74 @@ int \mbox{\hyperlink{pennfat_8c_a3c58e4046bc0fb7d042ae61a478b902f}{get\+\_\+num\
 int \mbox{\hyperlink{pennfat_8c_afe223c13a71e93bc31d9c453fd2fb856}{get\+\_\+data\+\_\+size}} (int \mbox{\hyperlink{pennfat__kernel_8c_a70b27761c7d0bd5cd90f4fe47e569b94}{block\+\_\+size}}, int \mbox{\hyperlink{pennfat__kernel_8c_af866bcf6c2272c2f6b1b7e5ad3a2e127}{num\+\_\+fat\+\_\+entries}})
 \item 
 int \mbox{\hyperlink{pennfat_8c_af81db977c099887a61b6c74f0893cb4a}{get\+\_\+offset\+\_\+size}} (int block\+\_\+num, int offset)
+\item 
+void \mbox{\hyperlink{pennfat_8c_a71f9fc8600d2bc8e7a150dc916c31105}{touch}} (char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}args)
+\item 
+void \mbox{\hyperlink{pennfat_8c_ac7051d05598e13d47c1f51c8f4fc41ec}{rm}} (char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}args)
+\item 
+void \mbox{\hyperlink{pennfat_8c_af3c595e77dc267c7748160ff5070eb12}{mv}} (char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}args)
+\item 
+void \mbox{\hyperlink{pennfat_8c_a3c36044e4d46eeeac317c0625aa2a0aa}{chmod}} (char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}args)
+\item 
+void \mbox{\hyperlink{pennfat_8c_afdca5618cfd95ac674ef9714c8aaf94b}{cat\+\_\+file\+\_\+wa}} (char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}args)
+\item 
+void \mbox{\hyperlink{pennfat_8c_a474b370f4b5879f82110fdca97892348}{cat\+\_\+w}} (char \texorpdfstring{$\ast$}{*}output)
+\item 
+void \mbox{\hyperlink{pennfat_8c_ab188252d77516fed55f14aee897fcaf8}{cat\+\_\+a}} (char \texorpdfstring{$\ast$}{*}output)
+\item 
+void \mbox{\hyperlink{pennfat_8c_a0a4a3cef40cd8acefe8d3913380a814a}{ls}} ()
+\item 
+void \mbox{\hyperlink{pennfat_8c_a45864d35d26a4bd9e21c7d003eca6089}{cp\+\_\+within\+\_\+fat}} (char \texorpdfstring{$\ast$}{*}source, char \texorpdfstring{$\ast$}{*}dest)
+\item 
+void \mbox{\hyperlink{pennfat_8c_aa7619ba3caa26fbd788a93bc650e7dba}{cp\+\_\+to\+\_\+host}} (char \texorpdfstring{$\ast$}{*}source, char \texorpdfstring{$\ast$}{*}host\+\_\+dest)
+\item 
+void \mbox{\hyperlink{pennfat_8c_a5e60907e2ac348f2b539ac4afd25d2bd}{cp\+\_\+from\+\_\+host}} (char \texorpdfstring{$\ast$}{*}host\+\_\+source, char \texorpdfstring{$\ast$}{*}dest)
 \end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
+\Hypertarget{pennfat_8c_ab188252d77516fed55f14aee897fcaf8}\label{pennfat_8c_ab188252d77516fed55f14aee897fcaf8} 
+\index{pennfat.c@{pennfat.c}!cat\_a@{cat\_a}}
+\index{cat\_a@{cat\_a}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{cat\_a()}{cat\_a()}}
+{\footnotesize\ttfamily void cat\+\_\+a (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{output }\end{DoxyParamCaption})}
+
+\Hypertarget{pennfat_8c_afdca5618cfd95ac674ef9714c8aaf94b}\label{pennfat_8c_afdca5618cfd95ac674ef9714c8aaf94b} 
+\index{pennfat.c@{pennfat.c}!cat\_file\_wa@{cat\_file\_wa}}
+\index{cat\_file\_wa@{cat\_file\_wa}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{cat\_file\_wa()}{cat\_file\_wa()}}
+{\footnotesize\ttfamily void cat\+\_\+file\+\_\+wa (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}}]{args }\end{DoxyParamCaption})}
+
+\Hypertarget{pennfat_8c_a474b370f4b5879f82110fdca97892348}\label{pennfat_8c_a474b370f4b5879f82110fdca97892348} 
+\index{pennfat.c@{pennfat.c}!cat\_w@{cat\_w}}
+\index{cat\_w@{cat\_w}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{cat\_w()}{cat\_w()}}
+{\footnotesize\ttfamily void cat\+\_\+w (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{output }\end{DoxyParamCaption})}
+
+\Hypertarget{pennfat_8c_a3c36044e4d46eeeac317c0625aa2a0aa}\label{pennfat_8c_a3c36044e4d46eeeac317c0625aa2a0aa} 
+\index{pennfat.c@{pennfat.c}!chmod@{chmod}}
+\index{chmod@{chmod}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{chmod()}{chmod()}}
+{\footnotesize\ttfamily void chmod (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}}]{args }\end{DoxyParamCaption})}
+
+\Hypertarget{pennfat_8c_a5e60907e2ac348f2b539ac4afd25d2bd}\label{pennfat_8c_a5e60907e2ac348f2b539ac4afd25d2bd} 
+\index{pennfat.c@{pennfat.c}!cp\_from\_host@{cp\_from\_host}}
+\index{cp\_from\_host@{cp\_from\_host}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{cp\_from\_host()}{cp\_from\_host()}}
+{\footnotesize\ttfamily void cp\+\_\+from\+\_\+host (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{host\+\_\+source,  }\item[{char \texorpdfstring{$\ast$}{*}}]{dest }\end{DoxyParamCaption})}
+
+\Hypertarget{pennfat_8c_aa7619ba3caa26fbd788a93bc650e7dba}\label{pennfat_8c_aa7619ba3caa26fbd788a93bc650e7dba} 
+\index{pennfat.c@{pennfat.c}!cp\_to\_host@{cp\_to\_host}}
+\index{cp\_to\_host@{cp\_to\_host}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{cp\_to\_host()}{cp\_to\_host()}}
+{\footnotesize\ttfamily void cp\+\_\+to\+\_\+host (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{source,  }\item[{char \texorpdfstring{$\ast$}{*}}]{host\+\_\+dest }\end{DoxyParamCaption})}
+
+\Hypertarget{pennfat_8c_a45864d35d26a4bd9e21c7d003eca6089}\label{pennfat_8c_a45864d35d26a4bd9e21c7d003eca6089} 
+\index{pennfat.c@{pennfat.c}!cp\_within\_fat@{cp\_within\_fat}}
+\index{cp\_within\_fat@{cp\_within\_fat}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{cp\_within\_fat()}{cp\_within\_fat()}}
+{\footnotesize\ttfamily void cp\+\_\+within\+\_\+fat (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{source,  }\item[{char \texorpdfstring{$\ast$}{*}}]{dest }\end{DoxyParamCaption})}
+
 \Hypertarget{pennfat_8c_a1d5876a5f78107bed3847c8d5485b7c4}\label{pennfat_8c_a1d5876a5f78107bed3847c8d5485b7c4} 
 \index{pennfat.c@{pennfat.c}!get\_block\_size@{get\_block\_size}}
 \index{get\_block\_size@{get\_block\_size}!pennfat.c@{pennfat.c}}
@@ -74,6 +138,12 @@ int \mbox{\hyperlink{pennfat_8c_af81db977c099887a61b6c74f0893cb4a}{get\+\_\+offs
 \doxysubsubsection{\texorpdfstring{int\_handler()}{int\_handler()}}
 {\footnotesize\ttfamily void int\+\_\+handler (\begin{DoxyParamCaption}\item[{int}]{signo }\end{DoxyParamCaption})}
 
+\Hypertarget{pennfat_8c_a0a4a3cef40cd8acefe8d3913380a814a}\label{pennfat_8c_a0a4a3cef40cd8acefe8d3913380a814a} 
+\index{pennfat.c@{pennfat.c}!ls@{ls}}
+\index{ls@{ls}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{ls()}{ls()}}
+{\footnotesize\ttfamily void ls (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
 \Hypertarget{pennfat_8c_adf6e89b78280efda4b5c486c9697b513}\label{pennfat_8c_adf6e89b78280efda4b5c486c9697b513} 
 \index{pennfat.c@{pennfat.c}!mkfs@{mkfs}}
 \index{mkfs@{mkfs}!pennfat.c@{pennfat.c}}
@@ -86,6 +156,12 @@ int \mbox{\hyperlink{pennfat_8c_af81db977c099887a61b6c74f0893cb4a}{get\+\_\+offs
 \doxysubsubsection{\texorpdfstring{mount()}{mount()}}
 {\footnotesize\ttfamily int mount (\begin{DoxyParamCaption}\item[{const char \texorpdfstring{$\ast$}{*}}]{fs\+\_\+name }\end{DoxyParamCaption})}
 
+\Hypertarget{pennfat_8c_af3c595e77dc267c7748160ff5070eb12}\label{pennfat_8c_af3c595e77dc267c7748160ff5070eb12} 
+\index{pennfat.c@{pennfat.c}!mv@{mv}}
+\index{mv@{mv}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{mv()}{mv()}}
+{\footnotesize\ttfamily void mv (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}}]{args }\end{DoxyParamCaption})}
+
 \Hypertarget{pennfat_8c_aa7e4fe1d0c843e02dfdba34edc69fe91}\label{pennfat_8c_aa7e4fe1d0c843e02dfdba34edc69fe91} 
 \index{pennfat.c@{pennfat.c}!prompt@{prompt}}
 \index{prompt@{prompt}!pennfat.c@{pennfat.c}}
@@ -97,6 +173,18 @@ int \mbox{\hyperlink{pennfat_8c_af81db977c099887a61b6c74f0893cb4a}{get\+\_\+offs
 \index{read\_command@{read\_command}!pennfat.c@{pennfat.c}}
 \doxysubsubsection{\texorpdfstring{read\_command()}{read\_command()}}
 {\footnotesize\ttfamily void read\+\_\+command (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}}]{cmds }\end{DoxyParamCaption})}
+
+\Hypertarget{pennfat_8c_ac7051d05598e13d47c1f51c8f4fc41ec}\label{pennfat_8c_ac7051d05598e13d47c1f51c8f4fc41ec} 
+\index{pennfat.c@{pennfat.c}!rm@{rm}}
+\index{rm@{rm}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{rm()}{rm()}}
+{\footnotesize\ttfamily void rm (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}}]{args }\end{DoxyParamCaption})}
+
+\Hypertarget{pennfat_8c_a71f9fc8600d2bc8e7a150dc916c31105}\label{pennfat_8c_a71f9fc8600d2bc8e7a150dc916c31105} 
+\index{pennfat.c@{pennfat.c}!touch@{touch}}
+\index{touch@{touch}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{touch()}{touch()}}
+{\footnotesize\ttfamily void touch (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}}]{args }\end{DoxyParamCaption})}
 
 \Hypertarget{pennfat_8c_a1db7f084483fe1bc09d688e3d3a69eb4}\label{pennfat_8c_a1db7f084483fe1bc09d688e3d3a69eb4} 
 \index{pennfat.c@{pennfat.c}!unmount@{unmount}}
