--- a/doc/latex/dc/d3d/pennfat_8h_source.tex
+++ b/doc/latex/dc/d3d/pennfat_8h_source.tex
@@ -7,35 +7,51 @@
 \DoxyCodeLine{00003\ }
 \DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <fcntl.h>}}
 \DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ <signal.h>}}
-\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <stdbool.h>}}
-\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <stdint.h>}}
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ <stdio.h>}}
-\DoxyCodeLine{00009\ \textcolor{preprocessor}{\#include\ <stdlib.h>}}
-\DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ <string.h>}}
-\DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ <sys/mman.h>}}
-\DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ <time.h>}}
-\DoxyCodeLine{00013\ }
-\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{parser_8h}{parser.h}}"{}}}
-\DoxyCodeLine{00015\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{pennfat__kernel_8h}{util/pennfat\_kernel.h}}"{}}}
-\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#ifndef\ PROMPT}}
-\DoxyCodeLine{00017\ \textcolor{preprocessor}{\#define\ PROMPT\ "{}penn-\/fat>\ "{}}}
-\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#endif}}
-\DoxyCodeLine{00019\ \textcolor{preprocessor}{\#define\ MAX\_LEN\ 4096}}
-\DoxyCodeLine{00020\ }
-\DoxyCodeLine{00021\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_adf6e89b78280efda4b5c486c9697b513}{mkfs}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ fs\_name,\ \textcolor{keywordtype}{int}\ blocks\_in\_fat,\ \textcolor{keywordtype}{int}\ block\_size\_config);}
-\DoxyCodeLine{00022\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_a2fe0ff1115fb73cfaef3441eb8d77426}{mount}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ fs\_name);}
-\DoxyCodeLine{00023\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_a1db7f084483fe1bc09d688e3d3a69eb4}{unmount}}();}
-\DoxyCodeLine{00024\ }
-\DoxyCodeLine{00025\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_aa7e4fe1d0c843e02dfdba34edc69fe91}{prompt}}();}
-\DoxyCodeLine{00026\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a0e88341628612c36ea0998958540138b}{read\_command}}();}
-\DoxyCodeLine{00027\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a95c1eedbf28e070d02d04fbbb832a3b8}{int\_handler}}(\textcolor{keywordtype}{int}\ signo);}
-\DoxyCodeLine{00028\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_a1d5876a5f78107bed3847c8d5485b7c4}{get\_block\_size}}(\textcolor{keywordtype}{int}\ block\_size\_config);}
-\DoxyCodeLine{00029\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_ad9f7eae33584363000a4ef799b8a53bf}{get\_fat\_size}}(\textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat__kernel_8c_a70b27761c7d0bd5cd90f4fe47e569b94}{block\_size}},\ \textcolor{keywordtype}{int}\ blocks\_in\_fat);}
-\DoxyCodeLine{00030\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_a3c58e4046bc0fb7d042ae61a478b902f}{get\_num\_fat\_entries}}(\textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat__kernel_8c_a70b27761c7d0bd5cd90f4fe47e569b94}{block\_size}},\ \textcolor{keywordtype}{int}\ blocks\_in\_fat);}
-\DoxyCodeLine{00031\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_afe223c13a71e93bc31d9c453fd2fb856}{get\_data\_size}}(\textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat__kernel_8c_a70b27761c7d0bd5cd90f4fe47e569b94}{block\_size}},\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat__kernel_8c_af866bcf6c2272c2f6b1b7e5ad3a2e127}{num\_fat\_entries}});}
-\DoxyCodeLine{00032\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_af81db977c099887a61b6c74f0893cb4a}{get\_offset\_size}}(\textcolor{keywordtype}{int}\ block\_num,\ \textcolor{keywordtype}{int}\ offset);}
-\DoxyCodeLine{00033\ }
-\DoxyCodeLine{00034\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a7d5ac507ab09ed439fe59e6ba52e6374}{initialize\_global\_fd\_table}}();}
-\DoxyCodeLine{00035\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <stdarg.h>}}
+\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <stdbool.h>}}
+\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ <stdint.h>}}
+\DoxyCodeLine{00009\ \textcolor{preprocessor}{\#include\ <stdio.h>}}
+\DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ <stdlib.h>}}
+\DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ <string.h>}}
+\DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ <sys/mman.h>}}
+\DoxyCodeLine{00013\ \textcolor{preprocessor}{\#include\ <time.h>}}
+\DoxyCodeLine{00014\ }
+\DoxyCodeLine{00015\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{parser_8h}{parser.h}}"{}}}
+\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{pennfat__kernel_8h}{util/pennfat\_kernel.h}}"{}}}
+\DoxyCodeLine{00017\ \textcolor{preprocessor}{\#ifndef\ PROMPT}}
+\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#define\ PROMPT\ "{}penn-\/fat>\ "{}}}
+\DoxyCodeLine{00019\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00020\ \textcolor{preprocessor}{\#define\ MAX\_LEN\ 4096}}
+\DoxyCodeLine{00021\ }
+\DoxyCodeLine{00022\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_adf6e89b78280efda4b5c486c9697b513}{mkfs}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ fs\_name,\ \textcolor{keywordtype}{int}\ blocks\_in\_fat,\ \textcolor{keywordtype}{int}\ block\_size\_config);}
+\DoxyCodeLine{00023\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_a2fe0ff1115fb73cfaef3441eb8d77426}{mount}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ fs\_name);}
+\DoxyCodeLine{00024\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_a1db7f084483fe1bc09d688e3d3a69eb4}{unmount}}();}
+\DoxyCodeLine{00025\ }
+\DoxyCodeLine{00026\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_aa7e4fe1d0c843e02dfdba34edc69fe91}{prompt}}();}
+\DoxyCodeLine{00027\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a0e88341628612c36ea0998958540138b}{read\_command}}();}
+\DoxyCodeLine{00028\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a95c1eedbf28e070d02d04fbbb832a3b8}{int\_handler}}(\textcolor{keywordtype}{int}\ signo);}
+\DoxyCodeLine{00029\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_a1d5876a5f78107bed3847c8d5485b7c4}{get\_block\_size}}(\textcolor{keywordtype}{int}\ block\_size\_config);}
+\DoxyCodeLine{00030\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_ad9f7eae33584363000a4ef799b8a53bf}{get\_fat\_size}}(\textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat__kernel_8c_a70b27761c7d0bd5cd90f4fe47e569b94}{block\_size}},\ \textcolor{keywordtype}{int}\ blocks\_in\_fat);}
+\DoxyCodeLine{00031\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_a3c58e4046bc0fb7d042ae61a478b902f}{get\_num\_fat\_entries}}(\textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat__kernel_8c_a70b27761c7d0bd5cd90f4fe47e569b94}{block\_size}},\ \textcolor{keywordtype}{int}\ blocks\_in\_fat);}
+\DoxyCodeLine{00032\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_afe223c13a71e93bc31d9c453fd2fb856}{get\_data\_size}}(\textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat__kernel_8c_a70b27761c7d0bd5cd90f4fe47e569b94}{block\_size}},\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat__kernel_8c_af866bcf6c2272c2f6b1b7e5ad3a2e127}{num\_fat\_entries}});}
+\DoxyCodeLine{00033\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennfat_8h_af81db977c099887a61b6c74f0893cb4a}{get\_offset\_size}}(\textcolor{keywordtype}{int}\ block\_num,\ \textcolor{keywordtype}{int}\ offset);}
+\DoxyCodeLine{00034\ }
+\DoxyCodeLine{00035\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a7d5ac507ab09ed439fe59e6ba52e6374}{initialize\_global\_fd\_table}}();}
+\DoxyCodeLine{00036\ }
+\DoxyCodeLine{00037\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a71f9fc8600d2bc8e7a150dc916c31105}{touch}}(\textcolor{keywordtype}{char}**\ args);}
+\DoxyCodeLine{00038\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_ac7051d05598e13d47c1f51c8f4fc41ec}{rm}}(\textcolor{keywordtype}{char}**\ args);}
+\DoxyCodeLine{00039\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_af3c595e77dc267c7748160ff5070eb12}{mv}}(\textcolor{keywordtype}{char}**\ args);}
+\DoxyCodeLine{00040\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a3c36044e4d46eeeac317c0625aa2a0aa}{chmod}}(\textcolor{keywordtype}{char}**\ args);}
+\DoxyCodeLine{00041\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_afdca5618cfd95ac674ef9714c8aaf94b}{cat\_file\_wa}}(\textcolor{keywordtype}{char}**\ args);}
+\DoxyCodeLine{00042\ }
+\DoxyCodeLine{00043\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a0a4a3cef40cd8acefe8d3913380a814a}{ls}}();}
+\DoxyCodeLine{00044\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a45864d35d26a4bd9e21c7d003eca6089}{cp\_within\_fat}}(\textcolor{keywordtype}{char}*\ source,\ \textcolor{keywordtype}{char}*\ dest);}
+\DoxyCodeLine{00045\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_aa7619ba3caa26fbd788a93bc650e7dba}{cp\_to\_host}}(\textcolor{keywordtype}{char}*\ source,\ \textcolor{keywordtype}{char}*\ host\_dest);}
+\DoxyCodeLine{00046\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a5e60907e2ac348f2b539ac4afd25d2bd}{cp\_from\_host}}(\textcolor{keywordtype}{char}*\ host\_source,\ \textcolor{keywordtype}{char}*\ dest);}
+\DoxyCodeLine{00047\ }
+\DoxyCodeLine{00048\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_a474b370f4b5879f82110fdca97892348}{cat\_w}}(\textcolor{keywordtype}{char}*\ output);}
+\DoxyCodeLine{00049\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{pennfat_8h_ab188252d77516fed55f14aee897fcaf8}{cat\_a}}(\textcolor{keywordtype}{char}*\ output);}
+\DoxyCodeLine{00050\ }
+\DoxyCodeLine{00051\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
